syntax = "proto3";

package user;

option go_package = "github.com/yahn1ukov/scribble/proto/user";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
  string email = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  string password = 4;
}

message CreateUserResponse {
  string id = 1;
}

message FindUserRequest {
  string email = 1;
}

message FindUserResponse {
  string id = 1;
  string password = 2;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
}

message UpdateUserPasswordRequest {
  string id = 1;
  string old_password = 2;
  string new_password = 3;
}

message DeleteUserRequest {
  string id = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc FindUser(FindUserRequest) returns (FindUserResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}
